--- a/forex_prediction.ipynb
+++ b/forex_prediction.ipynb
@@ -163,6 +163,36 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "61b32e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11284 entries, 0 to 11283\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column    Non-Null Count  Dtype         \n",
+      "---  ------    --------------  -----         \n",
+      " 0   Date      11284 non-null  datetime64[ns]\n",
+      " 1   Price     11284 non-null  float64       \n",
+      " 2   Open      11284 non-null  float64       \n",
+      " 3   High      11284 non-null  float64       \n",
+      " 4   Low       11284 non-null  float64       \n",
+      " 5   Change %  11284 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(4), object(1)\n",
+      "memory usage: 529.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
